@@ -54,19 +54,22 @@ SVNSERVER =
 SVN_ROOT = svn://svn.code.sf.net/p/sdcc/code
 
 # Regression test targets. To help reduce the load on the slower systems of the DCF, the
-# test targets are broken up into three categories:
+# test targets are broken up into four categories:
 #  REGTESTTARGETS_1_0: These will always be tested
-#  REGTESTTARGETS_2_0: These will be tested on even days
-#  REGTESTTARGETS_2_1: These will be tested on odd days
+#  REGTESTTARGETS_2_0: These will be tested on (day mod 3)==0
+#  REGTESTTARGETS_2_1: These will be tested on (day mod 3)==1
+#  REGTESTTARGETS_2_2: These will be tested on (day mod 3)==2
 REGTESTTARGETS_1_0 = test-ds390
-REGTESTTARGETS_2_0 = test-mcs51-medium test-mcs51-large test-mcs51-stack-auto test-hc08 test-ucz80 test-ucgbz80 test-ez80-z80 test-ucr2ka test-stm8-large test-pdk14 test-pdk15-stack-auto test-ucz180-resiy
-REGTESTTARGETS_2_1 = test-mcs51-small test-mcs51-huge test-mcs51-large-stack-auto test-s08 test-ucz180 test-ucz80n test-tlcs90 test-ucr2k test-ucr3ka test-stm8 test-ucz80-resiy test-pdk15
-
-DAYODD = $(shell date +%j | awk '{print $$0%2}')
-ifeq ($(strip $(DAYODD)),0)
+REGTESTTARGETS_2_0 = test-mcs51-medium test-mcs51-stack-auto test-hc08 test-ucz80 test-ez80-z80 test-ucr2ka test-stm8-large test-pdk15-stack-auto
+REGTESTTARGETS_2_1 = test-mcs51-small test-mcs51-large-stack-auto test-s08 test-ucz80n test-ucr2k test-stm8 test-ucz80-resiy test-pdk15
+REGTESTTARGETS_2_2 = test-mcs51-large test-mcs51-huge test-ucgbz80 test-ucz180 test-tlcs90 test-ucr3ka test-pdk14 test-ucz180-resiy
+DAYMOD = $(shell date +%j | awk '{print $$0%3}')
+ifeq ($(strip $(DAYMOD)),0)
+CROSSREGTESTTARGETS = $(REGTESTTARGETS_1_0) $(REGTESTTARGETS_2_0)
+else ifeq ($(strip $(DAYMOD)),1)
 CROSSREGTESTTARGETS = $(REGTESTTARGETS_1_0) $(REGTESTTARGETS_2_1)
 else
-CROSSREGTESTTARGETS = $(REGTESTTARGETS_1_0) $(REGTESTTARGETS_2_0)
+CROSSREGTESTTARGETS = $(REGTESTTARGETS_1_0) $(REGTESTTARGETS_2_2)
 endif
 REGTESTTARGETS = test-host $(CROSSREGTESTTARGETS)
 # Directory for regression test log file
